Revise index.html for installation details
Added installation requirements and updated content.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+#<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>TrollStore Installer</title>
+<title>TrollStore</title>
 
 <link rel="stylesheet" href="style.css">
 </head>
@@ -11,24 +11,39 @@
 
 <header>
     <h1>🍏 TrollStore</h1>
-    <p>Permanent IPA Installer</p>
+    <p>Permanent IPA Installer for iOS</p>
 </header>
 
 <main>
     <div class="card">
         <h2>Install TrollStore</h2>
-        <p>Supported iOS versions only</p>
+        <p class="desc">
+            Open this page in Safari on your iPhone.
+            Supported iOS versions only.
+        </p>
 
-        <!-- КНОПКА -->
-        <a href="#" class="btn install">Install</a>
+        <!-- КНОПКА УСТАНОВКИ -->
+        <a href="https://example.com/TrollStore.ipa"
+           class="btn install">
+           Install
+        </a>
 
-        <!-- iOS CHECK INFO -->
-        <p id="ios-info" class="ios-info">Checking iOS version…</p>
+        <!-- СТАТУС -->
+        <p id="ios-info" class="ios-info">Checking device…</p>
+    </div>
+
+    <div class="card">
+        <h3>Requirements</h3>
+        <ul>
+            <li>iPhone</li>
+            <li>Safari browser</li>
+            <li>iOS 15 – 17</li>
+        </ul>
     </div>
 </main>
 
 <footer>
-    <p>Open this page in Safari on iPhone</p>
+    <p>Not affiliated with Apple</p>
 </footer>
 
 <script src="script.js"></script>
